<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:n1="http://schemas.android.com/apk/res/android"
    n1:layout_width="fill_parent"
    n1:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    n1:background="@mipmap/bg1"
    n1:scrollbars="vertical"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        n1:layout_width="fill_parent"
        n1:layout_height="wrap_content">

        <RelativeLayout
            n1:id="@id/bg_layout"
            n1:layout_width="fill_parent"
            n1:layout_height="390.0dip">

            <ImageView
                n1:id="@id/wifi_bg_border"
                n1:layout_width="wrap_content"
                n1:layout_height="wrap_content"
                n1:layout_centerHorizontal="true"
                n1:layout_marginTop="86.0dip"
                n1:scaleType="fitXY"
                n1:src="@mipmap/bg_border"
                n1:visibility="visible" />


            <ImageView
                n1:id="@id/wifi_border_splash"
                n1:layout_width="wrap_content"
                n1:layout_height="wrap_content"
                n1:layout_centerHorizontal="true"
                n1:layout_marginTop="150.0dip"
                n1:src="@mipmap/icon_border_splash" />

            <ImageView
                n1:id="@id/wifi_ap"
                n1:layout_width="60dip"
                n1:layout_height="58dip"
                n1:layout_centerHorizontal="true"
                n1:layout_marginTop="170.0dip"
                n1:src="@mipmap/icon_ap"
                n1:visibility="visible" />

            <TextView
                n1:layout_width="wrap_content"
                n1:layout_height="wrap_content"
                n1:layout_centerHorizontal="true"
                n1:layout_marginTop="127.0dip"
                n1:text="@string/find_telnet"
                n1:textColor="@color/white"
                n1:textSize="@dimen/text_18dp" />

            <TextView
                n1:id="@id/telnet_connect"
                n1:layout_width="72.0dip"
                n1:layout_height="28.0dip"
                n1:layout_below="@id/wifi_ap"
                n1:layout_centerHorizontal="true"
                n1:layout_marginTop="25.0dip"
                n1:clickable="true"
                n1:focusable="true"
                n1:background="@drawable/round_rectangle"
                n1:gravity="center"
                n1:text="@string/telnet_connect"
                n1:textColor="@color/white"
                n1:textSize="@dimen/text_14dp" />

            <ImageView
                n1:layout_width="fill_parent"
                n1:layout_height="fill_parent"
                n1:layout_centerHorizontal="true"
                n1:scaleType="fitXY"
                n1:src="@mipmap/bg" />

            <TextView
                n1:layout_width="wrap_content"
                n1:layout_height="wrap_content"
                n1:layout_marginStart="15.0dip"
                n1:layout_marginTop="18.0dip"
                n1:text="@string/app_name"
                n1:textColor="@color/white"
                n1:textSize="@dimen/text_18dp" />
        </RelativeLayout>

        <android.support.v7.widget.CardView xmlns:n2="http://schemas.android.com/apk/res-auto"
            n1:layout_width="fill_parent"
            n1:layout_height="wrap_content"
            n1:layout_below="@id/bg_layout"
            n1:layout_marginBottom="2.0dip"
            n1:layout_marginEnd="15.0dip"
            n1:layout_marginStart="15.0dip"
            n1:layout_marginTop="-60.0dip"
            n1:elevation="5.0dip"
            n2:cardBackgroundColor="@color/white"
            n2:cardCornerRadius="10.0dip">

            <LinearLayout
                n1:layout_width="fill_parent"
                n1:layout_height="wrap_content"
                n1:orientation="vertical">

                <LinearLayout
                    n1:layout_width="fill_parent"
                    n1:layout_height="92.0dip"
                    n1:orientation="horizontal">

                    <LinearLayout
                        n1:id="@+id/olt_register"
                        n1:layout_width="0.0dip"
                        n1:layout_height="fill_parent"
                        n1:layout_weight="1.0"
                        n1:clickable="true"
                        n1:focusable="true"
                        n1:orientation="vertical">

                        <ImageView
                            n1:layout_width="wrap_content"
                            n1:layout_height="wrap_content"
                            n1:layout_gravity="center"
                            n1:layout_marginTop="21.0dip"
                            n1:src="@mipmap/icon_channel_analysis" />

                        <TextView
                            n1:layout_width="wrap_content"
                            n1:layout_height="wrap_content"
                            n1:layout_gravity="center"
                            n1:layout_marginTop="18.0dip"
                            n1:gravity="center"
                            n1:text="@string/OLT_register"
                            n1:textColor="@color/table_wifi_text"
                            n1:textSize="@dimen/text_14dp" />
                    </LinearLayout>

                    <View
                        n1:layout_width="1.0dip"
                        n1:layout_height="fill_parent"
                        n1:layout_gravity="center"
                        n1:layout_marginTop="20.0dip"
                        n1:background="@color/divider1" />

                    <LinearLayout
                        n1:id="@+id/rms_platform"
                        n1:layout_width="0.0dip"
                        n1:layout_height="fill_parent"
                        n1:layout_weight="1.0"
                        n1:clickable="true"
                        n1:focusable="true"
                        n1:orientation="vertical">

                        <ImageView
                            n1:layout_width="wrap_content"
                            n1:layout_height="wrap_content"
                            n1:layout_gravity="center"
                            n1:layout_marginTop="21.0dip"
                            n1:src="@mipmap/icon_wifi_info" />

                        <TextView
                            n1:layout_width="wrap_content"
                            n1:layout_height="wrap_content"
                            n1:layout_gravity="center"
                            n1:layout_marginTop="14.0dip"
                            n1:gravity="center"
                            n1:text="@string/RMS_table"
                            n1:textColor="@color/table_wifi_text"
                            n1:textSize="@dimen/text_14dp" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    n1:layout_width="fill_parent"
                    n1:layout_height="1.0dip"
                    n1:layout_marginEnd="20.0dip"
                    n1:layout_marginStart="20.0dip"
                    n1:background="@color/divider" />

                <LinearLayout
                    n1:layout_width="fill_parent"
                    n1:layout_height="92.0dip"
                    n1:orientation="horizontal">

                    <LinearLayout
                        n1:id="@+id/plugin_platform"
                        n1:layout_width="0.0dip"
                        n1:layout_height="fill_parent"
                        n1:layout_weight="1.0"
                        n1:clickable="true"
                        n1:focusable="true"
                        n1:orientation="vertical">

                        <ImageView
                            n1:layout_width="30.0dip"
                            n1:layout_height="29.0dip"
                            n1:layout_gravity="center"
                            n1:layout_marginTop="21.0dip"
                            n1:src="@mipmap/icon_roaming" />

                        <TextView
                            n1:layout_width="wrap_content"
                            n1:layout_height="wrap_content"
                            n1:layout_gravity="center"
                            n1:layout_marginTop="18.0dip"
                            n1:gravity="center"
                            n1:text="@string/plugin_platform"
                            n1:textColor="@color/table_wifi_text"
                            n1:textSize="@dimen/text_14dp" />
                    </LinearLayout>

                    <View
                        n1:layout_width="1.0dip"
                        n1:layout_height="fill_parent"
                        n1:layout_gravity="center"
                        n1:layout_marginBottom="20.0dip"
                        n1:background="@color/divider1" />

                    <LinearLayout
                        n1:id="@+id/web_config"
                        n1:layout_width="0.0dip"
                        n1:clickable="true"
                        n1:focusable="true"
                        n1:layout_height="fill_parent"
                        n1:layout_weight="1.0"
                        n1:orientation="vertical">

                        <ImageView
                            n1:layout_width="30.0dip"
                            n1:layout_height="29.0dip"
                            n1:layout_gravity="center"
                            n1:layout_marginTop="21.0dip"
                            n1:src="@mipmap/icon_zdy" />

                        <TextView
                            n1:layout_width="wrap_content"
                            n1:layout_height="wrap_content"
                            n1:layout_gravity="center"
                            n1:layout_marginTop="18.0dip"
                            n1:gravity="center"
                            n1:text="@string/web_config"
                            n1:textColor="@color/table_wifi_text"
                            n1:textSize="@dimen/text_14dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>